# AI-CoScientist

./: .env.example  .gitignore  CHATBOT_GUIDE.md  DOCUMENTATION_COMPLETE.md  ENHANCED_CHATBOT_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_IMPLEMENTED.md  PAPER_ENHANCEMENT_GUIDE.md  PAPER_SERVICE_IMPLEMENTED.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PROMPT_HISTORY.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  SOTA_README.md  SYSTEM_READY.md  TEST_VALIDATION_REPORT.md  WORD_EXPORT_COMPLETE.md  demo_paper_analysis.py  docker-compose.yml  paper_extracted.txt  paper_improved.docx  paper_original.docx  pyproject.toml  pytest.ini  simple_demo.py  test_paper_analysis.py  test_word_export.py  verify_setup.py  환경설정_완료.md
.serena/: project.yml
alembic/: env.py
claudedocs/: ENHANCEMENT_RESULTS_SUMMARY.md  EXECUTIVE_SUMMARY.md  EXPANDED_TRAINING_RESULTS.md  FINAL_SUMMARY.md  FINAL_TRAINING_RESULTS_V2.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_V2.md  IMPROVEMENT_PROGRESS_REPORT.md  ORDINAL_ARCHITECTURE_UPGRADE.md  SOTA_IMPLEMENTATION_SUMMARY.md  TEST_REPORT_SOTA.md  TRAINING_RESULTS_2025-10-06.md  WORKFLOW_SOTA_INTEGRATION.md  WORKFLOW_SUMMARY.md  paper-before-extracted.txt  paper-enhancements-for-8.8-9.0.md  paper-revised-excerpt.txt  paper_gap_analysis.md  paper_improvement_strategy_9.5.md  quick_wins_action_plan.md  research_sota_paper_quality_assessment.md  specific_rewrite_targets.md
design/: DESIGN_SUMMARY.md
docker/: Dockerfile
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  INDEX.md
neuroscience_ml_papers/: COLLECTION_GUIDE.md  FINAL_TOP5_SUMMARY.txt  README.md  TOP5_VENUES_SUMMARY.txt  download_direct_pdfs.py  download_multi_source.py  download_papers.py  download_strict_top5.py  download_top_tier_papers.py  papers_summary.txt  top_tier_papers_summary.txt  url_downloader.py
open_access_papers/: README.md  download_europepmc.py  download_more_papers.py  download_open_access.py  download_pmc_papers.py  download_pubmed_central.py  europepmc_summary.txt  papers_metadata.json  papers_summary.txt  pmc_papers_summary.txt  pubmed_central_summary.txt  scrape_papers.py  web_scraped_summary.txt
prompts/: experiment_design.j2  hypothesis_generation.j2  paper_writing_introduction.j2
scripts/: add_comparison_table.py  add_impact_boxes.py  add_literature_implications.py  add_open_access_papers.py  analyze_predictions.py  chat_reviewer.py  chat_reviewer_enhanced.py  create_improved_paper.py  create_stratified_split.py  create_validation_dataset.py  download_models.py  evaluate_docx.py  evaluate_text_direct.py  extract_docx_text.py  extract_pdf.py  generate_review.py  init.sh  insert_theoretical_justification.py  optimize_models.py  paper_evaluator.py  paper_evaluator_llm.py  run-api.sh  run-worker.sh  setup.sh  start.sh  start_ensemble_server.py  train_hybrid_model.py  train_hybrid_ordinal.py  txt_to_docx.py  (+4 more)
(+93 files in other folders)
